# tukey

./: .gitignore  2026-05-03_goals.md  AGENTS.md  CLAUDE.md  README.md  data_structure_contracts.md  implementation-status.md  issues.md  plan.yaml  pyproject.toml  requirements.md
.github/workflows/: ci.yml  release.yml
skills/tukey-live-eval/: SKILL.md
skills/tukey-live-eval/scripts/: run_live_eval.py
tests/: conftest.py  e2e_experiment_live.py  e2e_sdk_live.py  integration_live.py  test_agent_live_eval_workflow.py  test_artifacts.py  test_chat.py  test_client.py  test_config.py  test_experiment.py  test_providers.py  test_run_engine.py  test_run_native_routes.py  test_storage.py
tukey/: __main__.py  client.py
tukey/chat/: room.py
tukey/config/: manager.py
tukey/core/: __init__.py  contracts.py
tukey/experiment/: __init__.py  engine.py
tukey/mcp/: __init__.py  client.py  manager.py
tukey/providers/: __init__.py  base.py  litellm_provider.py  model_registry.py  openai_provider.py
tukey/run/: __init__.py  engine.py  executors.py
tukey/server/: app.py  run_chain_membership.py  websocket.py
tukey/server/routes/: annotations.py  artifacts.py  chat.py  config.py  config_sets.py  eval_plans.py  experiments.py  mcp.py  models.py  run_chains.py  runs.py  schedules.py  search.py  tasks.py
tukey/storage/: __init__.py  store.py
tukey/synthesis/: __init__.py  bundle.py  cli.py  tool.py
tukey/synthesis/tools/: __init__.py  basic_stats.py  tfidf.py
ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: AnnotationPopover.tsx  AnnotationReviewPopover.tsx  ChatRoom.tsx  ConfigSetEditor.tsx  CopyButton.tsx  DataDirDialog.tsx  ExportDialog.tsx  MarkdownContent.tsx  McpServerSetup.tsx  ModelConfig.tsx  ProviderSetup.tsx  ResponseCard.tsx  ResponseCarousel.tsx  RunChainView.tsx  RunOutputCard.tsx  SearchDialog.tsx  Sidebar.tsx  WelcomeSetup.tsx
ui/src/components/ui/: dialog.tsx
ui/src/hooks/: useChat.ts
ui/src/lib/: api.ts  textSelector.ts  wsManager.ts
ui/src/stores/: annotationStore.ts  chatStore.ts  tukeyStore.ts
