[project]
name = "tukey"
version = "0.1.0"
description = "Compare LLM responses side-by-side with local persistence"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "litellm>=1.40.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
tukey = "tukey.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tukey*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
